--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-bonjour je suis pacôme je sais pas installer github
+bonjour je suis pacôme je sais pas installer github je sais pas l'utiliser non plus mais j'adore jurassic park et les dinosaures
